--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   get_storage:
   geocoding: ^2.1.0
   geolocator: ^9.0.2
+  image_picker:
+  firebase_storage:
 
 dev_dependencies:
   flutter_test:
