--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   badges:
   printing: ^5.9.3
+  syncfusion_flutter_charts: ^19.1.54
 
 dev_dependencies:
   flutter_test:
