--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   badges:
   printing: ^5.9.3
   syncfusion_flutter_charts: ^19.1.54
+  geolocator_web: ^2.1.6
+  google_maps_flutter: ^2.1.8
+  google_maps_flutter_web: ^0.4.0
+  google_maps_utils: ^1.5.0+0
 
 dev_dependencies:
   flutter_test:
