--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   google_maps_flutter_web: ^0.4.0
   google_maps_utils: ^1.5.0+0
   audioplayers:
+  just_audio:
+  assets_audio_player:
 
 dev_dependencies:
   flutter_test:
